# What-s-up

./: .gitignore  CMakeLists.txt  README.md
Login/: CMakeLists.txt  account.db  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui
backend/: CMakeLists.txt  instant_messaging_analysis
backend/What-s-up/src/: main.cpp
backend/What-s-up/src/bot/: bot.cpp
backend/What-s-up/src/database/: group.cpp
backend/What-s-up/src/include/: clustering.h  connection.h  group.h
backend/What-s-up/src/recommendation/: recommendation.cpp
backend/src/: main.cpp
backend/src/Database/: db.cpp  group.cpp  message.cpp  user.cpp
backend/src/bot/: bot.cpp
backend/src/database/: chat.cpp  data.db  db.cpp  db_connection.cpp  group.cpp  message.cpp  user.cpp
backend/src/handle/: handle.cpp  handle_chat.cpp  handle_group.cpp  handle_message.cpp  handle_user.cpp
backend/src/include/: bot.h  chat.h  clustering.h  connection.h  db.h  db_connection.h  encryption.h  group.h  handle.h  log.h  media.h  message.h  recommendation.h  server.h  user.h
backend/src/media/: media.cpp
backend/src/recommendation/: clustering.cpp  recommendation.cpp
backend/src/server/: connection.cpp  handle.cpp  server.cpp
backend/src/utils/: encryption.cpp  log.cpp
build-Login-Desktop_Qt_6_5_2_GCC_64bit-Debug/: CMakeCache.txt  Login  Makefile  cmake_install.cmake
build-Login-Desktop_Qt_6_5_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-38bb4ffb23a125247f29.json  cache-v2-f2c8ddf27e346db18e6c.json  cmakeFiles-v1-4e2939ecbe82eb87ff84.json  cmakeFiles-v1-fcd88588a9107e1b4c1a.json  codemodel-v2-0fbb0f41f5aed2bb1f48.json  codemodel-v2-305321c2b8e0eb4ab554.json  directory-.-Debug-137d19223d74b731d674.json  index-2023-08-24T08-19-42-0209.json  index-2023-08-24T08-58-00-0032.json  target-Login-Debug-817ac80c91e4dfd7f4d4.json  target-Login_autogen-Debug-2000e47105571c209cd6.json
build-Login-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-Login-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Login-Desktop_Qt_6_5_2_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.80E6DF078997CC5B.idx  QDialog.79E9FB4D54B8B049.idx  QLabel.BF65ACD373A30844.idx  QLineEdit.29B6F01423DCEA5D.idx  QLocale.191DB2BAA76511EE.idx  QMainWindow.4754CC7F0BAC89D8.idx  QMenuBar.9EEE1E2EADE41420.idx  QMessageBox.3BF4D094F86D0068.idx  QPushButton.7A0E4695FEC327A6.idx  QStatusBar.8976974764FAE799.idx  QToolBar.936CBF42AA52D682.idx  QTranslator.D5D182F6EF0711B7.idx  QVariant.251FF4AE66860B24.idx  QWidget.70F6AF7060104C4B.idx  __stddef_max_align_t.h.B18026B1272428E9.idx  align.h.39AE23050B3DB93E.idx  alloca.h.B3C3404035C15EA6.idx  atomic_base.h.F118387B313E4F7F.idx  cstddef.337D34E624285F88.idx  cstdint.131423F6DD978BF6.idx  cxxabi_init_exception.h.430CE6EB8B5EC125.idx  limits.h.80447D86623EBADA.idx  locale.h.5F1EA2E91D0CD92F.idx  logindialog.cpp.46B78E9AFAB8477B.idx  logindialog.cpp.790153F40D64F7FE.idx  logindialog.h.4862B9CD37EF0B12.idx  logindialog.h.6FCFB28977745200.idx  main.cpp.4E2F1D506AEC1934.idx  main.cpp.5A25E1285BF79C76.idx  mainwindow.cpp.9AFB35BC63762C0F.idx  mainwindow.cpp.9F009D2EAAD17CE7.idx  mainwindow.h.599D9AB2E3C8DC67.idx  mainwindow.h.E16D29110008378A.idx  q20memory.h.A63C0ABE2A620C2C.idx  q20type_traits.h.AD909F2739A2ED20.idx  qabstractbutton.h.AD7AFE1D1640677F.idx  qaction.h.C8DB3DB07DBCCCD1.idx  qalgorithms.h.F9A28E02A1144E74.idx  qanystringview.h.F96838CD38D134A5.idx  qapplication.h.C53CBA345540FDC9.idx  (+177 more)
build-Login-Desktop_Qt_6_5_2_GCC_64bit-Debug/Login_autogen/: mocs_compilation.cpp
build-Login-Desktop_Qt_6_5_2_GCC_64bit-Debug/Login_autogen/EWIEGA46WW/: moc_logindialog.cpp  moc_logindialog.cpp.d  moc_mainwindow.cpp.d
build-Login-Desktop_Qt_6_5_2_GCC_64bit-Debug/Login_autogen/include/: ui_logindialog.h
build-Login-Qt_6_5_2_for_macOS-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-Login-Qt_6_5_2_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-53dce4a9fe7331f7d044.json  (+5 more)
build-Login-Qt_6_5_2_for_macOS-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-a3d05fe8ffb6880fc556.json  directory-.-Debug-b9c28105ec1e5b259020.json  index-2023-08-24T13-21-34-0494.json  target-Login-Debug-092314418e6add908e27.json  target-Login_autogen-Debug-c4b1f7cac379877b484d.json
build-Login-Qt_6_5_2_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-Login-Qt_6_5_2_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-Login-Qt_6_5_2_for_macOS-Debug/Login.app/Contents/: Info.plist
build-Login-Qt_6_5_2_for_macOS-Debug/Login.app/Contents/MacOS/: Login
build-Login-Qt_6_5_2_for_macOS-Debug/Login_autogen/: moc_predefs.h  mocs_compilation.cpp
build-Login-Qt_6_5_2_for_macOS-Debug/Login_autogen/EWIEGA46WW/: moc_logindialog.cpp  moc_logindialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_registerdialog.cpp  moc_registerdialog.cpp.d
build-Login-Qt_6_5_2_for_macOS-Debug/Login_autogen/include/: ui_logindialog.h  ui_mainwindow.h  ui_registerdialog.h
client/: CMakeLists.txt  main.cpp
client/director/: director.cpp  director.h
client/network/: connection.cpp  connection.h
client/ui/: UI-images.qrc  addnewfriend.cpp  addnewfriend.h  addnewfriend.ui  audiomessage.cpp  audiomessage.h  audiomessage.ui  audiorecord.cpp  audiorecord.h  audiorecord.ui  chatsettings.cpp  chatsettings.h  chatsettings.ui  chatwindow.cpp  chatwindow.h  chatwindow.ui  createchat.cpp  createchat.h  createchat.ui  customtoolbutton.cpp  customtoolbutton.h  filedownload.cpp  filedownload.h  filedownload.ui  friendrequest.cpp  friendrequest.h  friendrequest.ui  grouplist.cpp  grouplist.h  grouplist.ui  logindialog.cpp  logindialog.h  logindialog.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  photomessage.cpp  (+20 more)
client/utils/: avatarcreator.cpp  avatarcreator.h
md5_sample/: main  main.cpp  md5.cpp  md5.hpp
miscellany/: main.cpp
test_connect/test_client/: CMakeLists.txt  main.cpp
test_connect/test_server/: CMakeLists.txt  main.cpp
(+222 files in other folders)
